# partners-in-time-decomp

./: .gitignore  ARCHITECTURE.md  HANDOFF.md  Makefile  README.md  SETUP.md  shot.ppm
.github/workflows/: dashboard.yml
arm9/asm/: crt0.s  macros.inc
arm9/include/: arm_compat.h  bios.h  cp15.h  functions.h  game_classes.h  game_main.h  game_prop.h  heap.h  mem_simple.h  mem_util.h  nds_hardware.h  os_util.h  types.h
arm9/src/: FUN_02005d6c_shim.c  FUN_020062e0.c  FUN_0200913c.c  FUN_020091d0.c  FUN_020091d8.c  FUN_020091e4.c  FUN_020094c4.c  FUN_020094e0.c  FUN_02009508.c  FUN_02009520.c  FUN_020095f8.c  FUN_0200a48c.c  FUN_0200a494.c  FUN_0200b050.c  FUN_0200b68c.c  FUN_0200b7f0.c  FUN_0200b848.c  FUN_0200b8c8.c  FUN_0200b9fc.c  FUN_0200beb8.c  FUN_0200c3b0.c  FUN_0200c3cc.c  FUN_0200c3ec.c  FUN_0200c3f8.c  FUN_0200c408.c  FUN_0200c418.c  FUN_0200c424.c  FUN_0200c434.c  FUN_0200c58c.c  FUN_0200c5c8.c  FUN_0200c5fc.c  FUN_0200c6c8.c  FUN_0200c704.c  FUN_0200c738.c  FUN_0200c76c.c  FUN_0200c8e4.c  FUN_0200c920.c  FUN_0200c928.c  FUN_0200c988.c  FUN_0200c990.c  (+240 more)
assets/: README.md
config/: arm7.ld  arm9.ld  functions.csv  functions.txt  known_symbols.txt  overlays.txt  remaining_functions.txt  symbols.txt  undefined_syms.ld  versions.ini
docs/: ASSET_FORMAT.md  PROGRESS.md  index.html
dsd_project/: config.yaml  header.yaml  path_order.txt
dsd_project/arm7/: arm7.yaml
dsd_project/arm9/: arm9.yaml  itcm.yaml
dsd_project/arm9_overlays/: overlays.yaml
dsd_project/banner/: banner.yaml
dsd_project/files/Menu/: MenuDat
pc/: CMakeLists.txt  README.md
pc/include/: ad_decompress.h  arm_interp.h  asset_extractor.h  asset_pack.h  asset_viewer.h  host_fnptr_resolver.h  host_nds_fs.h  mlpit_pack.h  nds_boot_hook.h  nds_platform.h  nds_rom.h  sdk_symbol_aliases.h  sdk_symbol_aliases.txt
pc/src/: ad_decompress.c  arm_compat_host.c  arm_interp.c  asset_extractor.c  asset_pack.c  asset_viewer.c  game_thread.c  host_dat_fnptr_patch.c  host_data_init.c  host_display_data_init.c  host_factory_instantiate.c  host_fnptr_resolver.c  host_fnptr_table_gen.c  host_game_setup_overlay.c  host_gameplay_scene.c  host_gxfifo_observer.c  host_gxfifo_raster.c  host_nds_fs.c  host_oam_upload.c  host_scene_queue.c  host_sync_dat_from_rom.c  host_synth_sprite.c  host_test_node.c  host_title_scene.c  host_title_screen.c  host_undefined_stubs.c  main.c  nds_arm9_ram.c  nds_bg_render.c  nds_boot_hook.c  nds_hw_io.c  nds_hw_stubs.c  nds_overlay_loader.c  nds_rom.c  nds_vram.c  platform_sdl.c
rom/: README.txt
roms/: README.md
tools/: check_formats.py  decode_branches.py  decode_title.py  disasm_fn.py  extract_assets.py  gen_engine_a.py  inspect_archives.py  inspect_assets.py  scan_asm_callsites.py  scan_asm_litpool.py  scan_callsites.py  sprite_atlas_render.py
tools/ghidra/: ExportDecompiled.java  ExportFunctions.java  export_functions.py
tools/scripts/: auto_decomp_leaf.py  extract_data_inits.py  extract_rom.py  find_boot_screen_combos.py  find_gap_functions.py  find_pad_read.py  find_uninit_data.py  find_vtables.py  gen_dat_init_from_stubs.py  gen_fnptr_table.py  gen_host_stubs.py  gen_sdk_aliases.py  generate_dashboard.py  ghidra_setup.py  identify_symbols.py  parse_nds_fs.py  parse_overlay_table.py  resolve_vtable.py  split_arm9.py  sweep_boot_triples.py  trace_stubs.py  verify_match.py  verify_split.py  vtable_coverage.py
